--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ section {
 article{
     display: flex;
     width:10rem;
-    justify-content: space-inbetween;
+    /* justify-content: space-inbetween; */
     gap:0.5rem;
 }
 
