--- a/style.css
+++ b/style.css
@@ -178,6 +178,11 @@ section {
     width: 400px;
     margin: auto 0;
 }
+.section__pic-container img {
+    border-radius: 2rem;
+}
+
+
 
 .section__text{
     align-self: center ;
